--- a/app/src/main/res/layout/activity_tambah.xml
+++ b/app/src/main/res/layout/activity_tambah.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="6dp"
     android:orientation="vertical"
-    tools:context=".Activity.TambahActivity">
+    tools:context=".Activity.Activity.TambahActivity">
 
 
     <TextView
