--- a/app/src/main/res/layout/list_item_kampus.xml
+++ b/app/src/main/res/layout/list_item_kampus.xml
@@ -13,6 +13,11 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Id"/>
+        <TextView
             android:id="@+id/tv_nama"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
